@@ -1,3 +1,9 @@
+Mon Apr 14 10:42:06 GMT 2014  Olly Betts <olly@survex.com>
+
+	* omindex.cc: Filtering via text/html now handles HTML documents which
+	  specify a charset.  "application/vnd.ms-outlook" is now handled by
+	  filtering via text/html rather than as a hard-coded special case.
+
 Thu Apr 10 03:47:18 GMT 2014  Olly Betts <olly@survex.com>
 
 	* docs/overview.rst,omindex.cc: Add support for indexing Microsoft
